@@ -1,0 +1,3 @@
+When /^I press button "([^"]*)"$/ do |action|
+  pending
+end
