@@ -27,6 +27,10 @@ require 'cucumber/rails/capybara_javascript_emulation' # Lets you click links wi
 # steps to use the XPath syntax.
 Capybara.default_selector = :css
 
+# Capybara.register_driver :selenium do |app|
+#   Capybara::Driver::Selenium.new(app, {:browser => :chrome } )
+# end
+
 # If you set this to false, any error raised from within your app will bubble
 # up to your step definition and out to cucumber unless you catch it somewhere
 # on the way. You can make Rails rescue errors and render error pages on a
