@@ -47,9 +47,11 @@ Gem::Specification.new do |s|
     "features/scopes.feature",
     "features/step_definitions/custom_css_steps.rb",
     "features/step_definitions/generic_steps.rb",
+    "features/step_definitions/touch_steps.rb",
     "features/step_definitions/web_steps.rb",
     "features/support/env.rb",
     "features/support/paths.rb",
+    "features/touch.feature",
     "init.rb",
     "install.rb",
     "javascripts/core.js",
