@@ -1,5 +1,6 @@
 = v0.6.6 - to be released
 * enhancements
+  * Client-server communication is updated to use Ext.Direct (by @pschyska)
   * Introduced +js_translate+ class method that allows specifying i18n properties used in the JavaScript class
   * Better handling of actions i18n
 
